Logistics while dispatching

--- a/VaultOfTrade/WebContent/resources/appProp.properties
+++ b/VaultOfTrade/WebContent/resources/appProp.properties
@@ -1,7 +1,8 @@
 bus.impl=busns
 
-#mySQL DB properties
 db.impl = mySql
-mySQLurl=jdbc:mysql://tradevault.cyo7gdqe4kbh.us-east-2.rds.amazonaws.com:3306/tradeVault
-mySQLuser=Eldo
-mySQLpassword=Deeptiliz_1
+
+#mySQL DB properties
+mySQLurl=
+mySQLuser=
+mySQLpassword=
